@@ -29,7 +29,9 @@ as.single(x, \dots)
 
   \code{as.double} attempts to coerce its argument to be of double
   type: like \code{\link{as.vector}} it strips attributes including
-  names.  Character strings containing either a decimal representation or a
+  names.  (To ensure that an object is of double type without
+  stripping attributes, use \code{\link{storage.mode}}.)
+  Character strings containing either a decimal representation or a
   hexadecimal representation (starting with \code{0x} or \code{0X}) can
   be converted.
 
@@ -50,7 +52,7 @@ as.single(x, \dots)
   Wadsworth \& Brooks/Cole.
 }
 \seealso{
-  \code{\link{integer}}, \code{\link{numeric}}.
+  \code{\link{integer}}, \code{\link{numeric}}, \code{\link{storage.mode}}.
 }
 \examples{
 is.double(1)
